# oehrpy

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  INTEGRATION_TEST_STATUS.md  LICENSE  README.md  docker-compose.local.yml  docker-compose.yml  logo-suite.html  mkdocs.yml  pyproject.toml  test_web_template.sh
.github/workflows/: ci.yml  docs.yml  publish.yml  release.yml  vscode-extension-ci.yml  vscode-extension-publish.yml
docs/: FLAT_FORMAT_VERSIONS.md  brand-kit-archetype-brick.html  brand-kit.html  changelog.md  contributing.md  converter.html  docs.html  explorer.html  flat-format-learnings.md  index.html  index.md  integration-testing-journey.md  robots.txt  sitemap.xml  validator.html  vscode.html  workflow.html
docs/adr/: 0001-odin-parsing-and-rm-1.1.0-support.md  0002-integration-testing-with-ehrbase.md  0003-pre-commit-hooks-for-code-quality.md  0005-web-template-as-primary-source-of-truth-for-flat-paths.md  0006-align-import-name-with-pypi-package-name.md  0007-dual-backend-flat-validation.md  0008-opt-validation-via-python-cli-in-vscode.md
docs/architecture/: overview.md
docs/background/: about.md  articles.md  openehr-ecosystem.md
docs/branding/: guidelines.md
docs/ehrbase-issues/: 001-flat-format-documentation-gap.md
docs/getting-started/: compatibility.md  installation.md  quick-start.md
docs/guides/: aql-builder.md  ehrbase-client.md  template-builders.md
docs/prd/: PRD-0000-python-openehr-sdk.md  PRD-0001-odin-parser.md  PRD-0002-composition-lifecycle.md  PRD-0003-audit-and-contributions.md  PRD-0004-dynamic-composition-builders.md  PRD-0005-ehr-management-and-query-extensions.md  PRD-0006-flat-format-validator.md  PRD-0006-github-pages-documentation.md  PRD-0007-github-pages-documentation.md  PRD-0007-pyodide-integration.md  PRD-0007-vscode-flat-validator.md  PRD-0008-opt-validator.md  PRD-0009-canonical-flat-converter.md  PRD-0010-template-explorer.md  PRD-0011-platform-migration-helper.md  PRD-0012-workflow-diagram.md  PRD-0013-template-management-methods.md  PRD-0014-github-pages-seo.md  PRD-0015-vscode-flat-validator.md
docs/stylesheets/: brand.css
examples/: generate_builder_from_opt.py
generator/: bmm_parser.py  generate_rm_1_1_0.py  pydantic_generator.py
src/oehrpy/: __init__.py  validate_opt_cli.py
src/oehrpy/aql/: __init__.py
src/oehrpy/client/: __init__.py  contribution.py  ehrbase.py
src/oehrpy/serialization/: canonical.py
src/oehrpy/templates/: builder_generator.py  opt_parser.py
src/oehrpy/validation/: __init__.py  __main__.py  path_checker.py  platforms.py  required_fields.py  suggestions.py  web_template.py
src/oehrpy/validation/opt/: __init__.py  flat_impact.py  rm_types.py  semantic_checks.py
src/openehr_sdk/: __init__.py  validate_opt_cli.py
src/openehr_sdk/aql/: __init__.py  builder.py
src/openehr_sdk/client/: __init__.py  ehrbase.py
src/openehr_sdk/rm/: __init__.py  rm_types.py
src/openehr_sdk/serialization/: __init__.py  canonical.py  flat.py
src/openehr_sdk/templates/: __init__.py  builder_generator.py  builders.py  opt_parser.py
src/openehr_sdk/validation/: __init__.py  path_checker.py  web_template.py
src/openehr_sdk/validation/opt/: __init__.py  issue_codes.py  rm_types.py  semantic_checks.py  structural_checks.py  xml_checks.py
templates/: .release_notes.md.j2
templates/.components/: first_release.md.j2  versioned_changes.md.j2
tests/: test_aql.py  test_composition_lifecycle.py  test_contributions.py  test_flat.py  test_import_paths.py  test_opt_validator.py  test_rm_types.py  test_serialization.py  test_template_management.py  test_templates.py  test_validation.py  test_validation_cli.py  test_web_template_cache.py
tests/fixtures/: vital_signs.opt
tests/integration/: conftest.py  test_aql_queries.py  test_canonical_format.py  test_composition_lifecycle.py  test_compositions.py  test_contributions.py  test_ehr_operations.py  test_round_trip.py  test_template_management.py
vscode-extension/: .eslintrc.json  .vscodeignore  README.md  language-configuration.json  package-lock.json  package.json  tsconfig.json
vscode-extension/scripts/: generate-icon.py
vscode-extension/src/: autocomplete.ts  config.ts  detector.ts  diagnostics.ts  extension.ts  flatPaths.ts  hover.ts  optDiagnostics.ts  optModel.ts  optValidator.ts  patterns.ts  quickfix.ts  statusBar.ts  templateResolver.ts  templateTree.ts  validation.ts  validator.ts  webTemplate.ts
vscode-extension/test/unit/: autocomplete.test.ts  detector.test.ts  opt.test.ts  templateTree.test.ts  validation.test.ts
